--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/spaghetti.html">Spaghetti Recipe</a></li>
+        <li><a href="./recipes/macncheese.html">Macaroni & Cheese Recipe</a></li>
+    </ul>
 </body>
 </html>
