Add ingredients list

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
+    <img src="../images/lasagna.png" alt="Yummy lasagna" width="500px">
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Italian sausage</li>
+        <li>Ground beef</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Crushed tomatoes, tomato sauce and tomato paste</li>
+        <li>Sugar</li>
+        <li>Parsley</li>
+        <li>Basil</li>
+        <li>Salt</li>
+        <li>Italian seasoning</li>
+        <li>Fennel seeds</li>
+        <li>Black pepper</li>
+        <li>Lasagna noodles</li>
+        <li>Cheese</li>
+        <li>Eggs</li>
+    </ul>
 </body>
 </html>
