Add ingredients list

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Spaghetti Recipe</h1>
+    <img src="../images/momspaghetti.png" alt="Yummy spaghetti" width="500px">
+    <h2>Ingredients</h2>
+    <ul>
+        <li>16 ounces of Spaghetti</li>
+        <li>2 tbsp olive oil</li>
+        <li>3 diced bacon strips</li>
+        <li>1 large finely chopped onion</li>
+        <li>1 finely chopped celery</li>
+        <li>1 finely chopped carrot</li>
+        <li>1 tsp dried oregano</li>
+        <li>3 minced cloves of garlic</li>
+        <li>1 lb lean ground beef</li>
+        <li>2 tbsp balsamic vinegar</li>
+        <li>2 cans crushed tomatoes</li>
+        <li>2 tbsp tomato paste</li>
+        <li>2 tsp white sugar</li>
+        <li>Salt & pepper</li>
+        <li>2 tbsp chopped basil</li>
+        <li>Quarter cup freshly grated parmesan cheese</li>
+    </ul>
 </body>
 </html>
