Add ingredients list

--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -7,5 +7,17 @@
 </head>
 <body>
     <h1>Macaroni & Cheese Recipe</h1>
+    <img src="../images/macnchee.png" alt="Yummy mac & cheese" width="500px">
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Macaroni noodles</li>
+        <li>Butter</li>
+        <li>Flour</li>
+        <li>Milk</li>
+        <li>Cheddar & Parmesan cheese</li>
+        <li>Salt & pepper</li>
+        <li>Paprika</li>
+        <li>Bread crumbs</li>
+    </ul>
 </body>
 </html>
