Add spaghetti instructions

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -27,5 +27,20 @@
         <li>2 tbsp chopped basil</li>
         <li>Quarter cup freshly grated parmesan cheese</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Fill pot with lightly salter water, bring to rolling boil</li>
+        <li>Stir in spaghetti</li>
+        <li>Cook spaghetti uncovered, drain pot</li>
+        <li>Heat olive oil in large pot over medium heat, add bacon</li>
+        <li>Cook bacon until crisp, add vegetables to bacon</li>
+        <li>Cook until vegetables soften</li>
+        <li>Add garlic, cook until fragrant</li>
+        <li>Crumble in ground beef, cook to completion</li>
+        <li>Pour vinegar, simmer until liquid evaporates</li>
+        <li>Stir in crushed tomatoes, tomato paste, and sugar</li>
+        <li>Season with salt & pepper</li>
+        <li>Spoon sause over spaghetti, top with Parmesan to serve</li>
+    </ol>
 </body>
-</html>
+</html> 
