Add mac&cheese instructions

--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -19,5 +19,12 @@
         <li>Paprika</li>
         <li>Bread crumbs</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Boil noodles, drain, then transfer to baking dish</li>
+        <li>Make cheese sause, pour over noodles and stir</li>
+        <li>Make the topping, spread it and sprinke with paprika</li>
+        <li>Bake mac & cheese until the topping is golden brown</li>
+    </ol>
 </body>
 </html>
